# dottree

./: LICENSE  README.md  README.rst  pyproject.toml
dottree/: __init__.py
tests/: test_dottree.py
