[tool.poetry]
name = "dottree"
version = "0.1.2"
description = ""
authors = ["Jitender <gitbackspacer@gmail.com>"]

# New attributes
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gitbackspacer/dottree"
repository = "https://github.com/gitbackspacer/dottree"
keywords = ["markdown", "tree", "dict"]
classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
